--- a/ollama-tutorial.ipynb
+++ b/ollama-tutorial.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "In this notebook, we'll explore how to use open-source models with **Ollama**.\n",
+    "In this notebook, we'll explore how to use open-source Large Language Models (LLMs) with **Ollama**.\n",
     "\n",
     "**Ollama** is a convenient platform for local development of open-source AI models.\n",
     "Before Ollama, it used to be complicated to run open-source LLMs locally. It used to be very technical and required good understanding of computer hardware and architecture.\n",
@@ -588,55 +588,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt_poem = \"Write a poem about a friendly baby fox.\"\n",
+    "prompt_product = \"Create a product description for EcoHoops - an eco-friendly sportswear for basketball players\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In forest depths, where sunbeams play,\n",
-      "A tiny fox with fur so bright came to stay.\n",
-      "His eyes, like emeralds shining wide,\n",
-      " Sparkled with kindness, as he'd glide.\n",
+      "Here's a product description for EcoHoops:\n",
       "\n",
-      "With steps so light, and ears so fine,\n",
-      "He'd dance through grass, with a playful whine.\n",
-      "His bushy tail, a-twitch with glee,\n",
-      " Invited friends, to come and see.\n",
+      "**Introducing EcoHoops: The Sustainable Game-Changer in Basketball Sportswear**\n",
       "\n",
-      "This friendly baby fox, with heart so true,\n",
-      "Would snuggle close, and nuzzle too.\n",
-      "He'd lick your hand, with a gentle touch,\n",
-      "And bring a smile, from the forest's hush.\n",
+      "Take your game to the next level while doing good for the planet with EcoHoops, the ultimate eco-friendly sportswear for basketball players. Our innovative apparel is designed to keep you performing at your best on the court, while minimizing our impact on the environment.\n",
       "\n",
-      "As he explored, with curious eyes,\n",
-      "He'd discover wonders, in sun-kissed skies.\n",
-      "A butterfly's dance, or a bird's sweet song,\n",
-      "Would fill his heart, with joy so strong.\n",
+      "**What sets us apart:**\n",
       "\n",
-      "This little fox, with a spirit so bright,\n",
-      "Shone like a star, on a forest night.\n",
-      "His friendly nature, and loving ways,\n",
-      " Made friends of all, who'd gaze upon his face.\n",
+      "* **Sustainable Materials**: Our jerseys and shorts are made from a unique blend of recycled polyester, organic cotton, and Tencel, reducing waste and minimizing carbon footprint.\n",
+      "* **Moisture-wicking Technology**: Our fabric is designed to keep you cool and dry during even the most intense games, ensuring maximum comfort and performance.\n",
+      "* **Breathable Mesh Panels**: Strategically placed mesh panels provide ventilation and flexibility, allowing for a full range of motion on the court.\n",
       "\n",
-      "So if you wander, through the woods one day,\n",
-      "And meet this baby fox, in a sunny ray,\n",
-      "Don't be afraid, just smile and say,\n",
-      "\"Hello little friend,\" and come what may.\n"
+      "**Features:**\n",
+      "\n",
+      "* **Quick-drying and moisture-wicking properties**\n",
+      "* **Four-way stretch for ultimate mobility**\n",
+      "* **Anti-odor technology to keep you fresh all game long**\n",
+      "* **Reflective accents for increased visibility during night games or practices**\n",
+      "\n",
+      "**Join the EcoHoops Movement:**\n",
+      "\n",
+      "At EcoHoops, we're passionate about creating a more sustainable future in sports. By choosing our eco-friendly sportswear, you'll not only be performing at your best on the court, but also contributing to a reduced environmental impact.\n",
+      "\n",
+      "**Shop with us today and experience the difference for yourself!**\n",
+      "\n",
+      "Order now and get 15% off your first purchase with code: ECOHOOPS15\n"
      ]
     }
    ],
    "source": [
     "import ollama\n",
     "\n",
-    "prompt_poem = \"Write a poem about a friendly baby fox.\"\n",
-    "\n",
     "model = \"llama3.1\"\n",
     "\n",
     "response = ollama.chat(\n",
     "    model=model, \n",
-    "    messages=[{\"role\": \"user\", \"content\": prompt_poem}], \n",
+    "    messages=[{\"role\": \"user\", \"content\": prompt_product}], \n",
     "    options={\"temperature\": 0}\n",
     "    )\n",
     "\n",
@@ -652,26 +657,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In forest depths, where sunbeams play,\n",
-      "A tiny fox with fur so bright came to stay.\n",
-      "His eyes, like emeralds shining wide,\n",
-      " Sparkled with kindness, as he'd glide.\n",
+      "Here's a product description for EcoHoops:\n",
       "\n",
-      "With steps so light, and ears so fine\n"
+      "**Introducing EcoHoops: The Sustainable Game-Changer in Basketball Sportswear**\n",
+      "\n",
+      "Take your game to the next level while doing good for the planet with EcoHoops, the ultimate eco-friendly\n"
      ]
     }
    ],
    "source": [
     "response = ollama.chat(\n",
     "    model=model, \n",
-    "    messages=[{\"role\": \"user\", \"content\": prompt_poem}], \n",
+    "    messages=[{\"role\": \"user\", \"content\": prompt_product}], \n",
     "    options={\"num_predict\": 50, \"temperature\": 0}\n",
     "    )\n",
     "\n",
@@ -684,13 +688,54 @@
    "source": [
     "Do you see the problem?\n",
     "\n",
-    "The model generates the same poem but with a hard-stop when reaching the token limit.\n",
+    "The model generates the same poem description with a hard-stop when reaching the token limit.\n",
     "\n",
     "So the response is incomplete.\n",
     "\n",
     "By using max tokens, we risk that the model will not finish its response.\n",
     "\n",
-    "<img src=\"images/tokens50.png\" alt=\"systemImage\" width=500 />"
+    "<img src=\"images/tokens.png\" alt=\"systemImage\" width=500 />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So if I actually wanted a shorter description, I'd say it in the prompts, like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"EcoHoops is the game-changing, eco-friendly sportswear for ballers. Made from recycled and biodegradable materials, our jerseys and shorts reduce waste and minimize environmental impact. Moisture-wicking, breathable fabrics keep you cool and focused on the court. Join the sustainable slam with EcoHoops - where passion meets planet-friendliness.\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt_product_short = \"Create a 50-word product description for EcoHoops - an eco-friendly sportswear for basketball players\"\n",
+    "\n",
+    "model = \"llama3.1\"\n",
+    "\n",
+    "response = ollama.chat(\n",
+    "    model=model, \n",
+    "    messages=[{\"role\": \"user\", \"content\": prompt_product_short}], \n",
+    "    options={\"temperature\": 0}\n",
+    "    )\n",
+    "\n",
+    "print(response[\"message\"][\"content\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using max tokens is practical and widely used. But be careful when using it."
    ]
   },
   {
@@ -735,44 +780,126 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "While there's no one-size-fits-all formula for getting rich, here are some general tips that\n"
-     ]
-    }
-   ],
    "source": [
-    "def generate_response(messages, **kwargs):\n",
-    "    response = ollama.chat(model=model, messages=messages, **kwargs)\n",
-    "    return response[\"message\"][\"content\"]\n",
+    "### Testing Seed\n",
     "\n",
-    "messages = [{\"role\": \"user\", \"content\": \"How to get rich?\"}]\n",
-    "response = generate_response(messages, options={\"num_predict\": 20})\n",
+    "As I mentioned in the temperature part, for high temperatures we get various results even when we use the same prompt. It's because the \"randomness\" of the model is high.\n",
     "\n",
-    "print(response)"
+    "But in computer science, randomness isn't fully random...\n",
+    "\n",
+    "What does it mean? Even for higher temperatures, you can replicate identical results.\n",
+    "\n",
+    "To do that, you need to add the `seed` parameter in the options.\n",
+    "\n",
+    "Let's set it to 42, while increasing the temperature to 0.7:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Getting rich requires a combination of smart financial decisions, hard work, and a bit of luck. Here\n"
+      "\"Play with purpose in EcoHoops, the game-changing sportswear for basketball enthusiasts. Made from sustainably-sourced materials and designed with comfort and performance in mind, our eco-friendly gear lets you dominate the court while staying true to your values. Join the movement towards a greener game.\"\n"
      ]
     }
    ],
    "source": [
-    "ollama.chat(model=model, messages=messages)"
+    "import ollama\n",
+    "\n",
+    "prompt_product_short = \"Create a 50-word product description for EcoHoops - an eco-friendly sportswear for basketball players\"\n",
+    "\n",
+    "model = \"llama3.1\"\n",
+    "\n",
+    "response = ollama.chat(\n",
+    "    model=model, \n",
+    "    messages=[{\"role\": \"user\", \"content\": prompt_product_short}], \n",
+    "    options={\"temperature\": 0.7, \"seed\": 42}\n",
+    "    )\n",
+    "\n",
+    "print(response[\"message\"][\"content\"])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's run the same code again, to see if the description is identical."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"Play with purpose in EcoHoops, the game-changing sportswear for basketball enthusiasts. Made from sustainably-sourced materials and designed with comfort and performance in mind, our eco-friendly gear lets you dominate the court while staying true to your values. Join the movement towards a greener game.\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = ollama.chat(\n",
+    "    model=model, \n",
+    "    messages=[{\"role\": \"user\", \"content\": prompt_product_short}], \n",
+    "    options={\"temperature\": 0.7, \"seed\": 42}\n",
+    "    )\n",
+    "\n",
+    "print(response[\"message\"][\"content\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is! Now what happens when we remove `seed` from options?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"EcoHoops is the game-changing, eco-conscious sportswear for basketball enthusiasts. Made from sustainable materials, our shirts and shorts reduce waste and minimize environmental impact. Moisture-wicking fabrics keep you cool and dry during intense games. Join the movement towards greener hoops with EcoHoops - where performance meets planet-friendly design.\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = ollama.chat(\n",
+    "    model=model, \n",
+    "    messages=[{\"role\": \"user\", \"content\": prompt_product_short}], \n",
+    "    options={\"temperature\": 0.7}\n",
+    "    )\n",
+    "\n",
+    "print(response[\"message\"][\"content\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We get a similar but different response.\n",
+    "\n",
+    "So the `seed` parameter is great when you aim for creativity, while having an option to replicate the results."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusions\n",
+    "\n"
    ]
   },
   {
