--- a/ollama-tutorial.ipynb
+++ b/ollama-tutorial.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "With Ollama, running local models is straightforward.\n",
     "\n",
-    "Here's all you need:\n",
+    "All you need:\n",
     "1. [Download Ollama](https://ollama.com/download) on you local system.\n",
     "2. Download one of the local models on your computer using Ollama.\n",
     "For example, if I want to use Llama3, I need to open the terminal and run:\n",
@@ -30,7 +30,15 @@
     "$ pip install ollama\n",
     "```\n",
     "\n",
-    "And with these steps, you're ready to run the code from this notebook."
+    "And with these steps, you're ready to run the code from this notebook.\n",
+    "\n",
+    "In the notebook, we'll go throught the following topics:\n",
+    "- using open-source models with Ollama\n",
+    "- the importance of the system prompt\n",
+    "- streaming responses with Ollama\n",
+    "- the practical applications of the LLMs temperature\n",
+    "- the usage and limitations of the max tokens parameter\n",
+    "- replicating \"creative\" responses with the seed parameter"
    ]
   },
   {
