--- a/ollama-tutorial.ipynb
+++ b/ollama-tutorial.ipynb
@@ -907,7 +907,22 @@
    "metadata": {},
    "source": [
     "### Conclusions\n",
-    "\n"
+    "\n",
+    "Congrats! You just learned a bunch!\n",
+    "\n",
+    "You now know:\n",
+    "- how to run Llama 3 with Ollama\n",
+    "- how to stream your responses using Ollama\n",
+    "- the importance and usage of the system prompt\n",
+    "- the meaning and practical applications of the LLMs temperature\n",
+    "- how to replicate responses using the seed parameter\n",
+    "- the pros and cons of using the max tokens option\n",
+    "\n",
+    "Now take the code and try play with it!\n",
+    "\n",
+    "Play with the prompts and options and see how the results change.\n",
+    "\n",
+    "Have fun!"
    ]
   },
   {
