back to the standard system message

--- a/ollama-tutorial.ipynb
+++ b/ollama-tutorial.ipynb
@@ -868,11 +868,11 @@
    "source": [
     "### Streaming\n",
     "\n",
-    "A nice feature of Ollama is the ability to stream responses. Afrer using ChatGPT or Claude, we expect the responses to run as streams. Here's how to do it.\n",
+    "A nice feature of Ollama is the ability to stream responses. Afrer using ChatGPT or Claude, we expect the responses to run as streams. \n",
     "\n",
-    "The biggest change will come from the `stream` parameter. We just set it to `True`. \n",
-    "\n",
-    "But we also need to run the `ollama.chat()` in a for loop.\n",
+    "We need 2 changes in our code:\n",
+    "1. Set the `stream` parameter to `True`. \n",
+    "2. Run the `ollama.chat()` in a for loop.\n",
     "\n",
     "Here's how:"
    ]
